--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
     "isbot": "^4.1.0",
+    "mongodb": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
